BIKE-3,4: Add layout BE & DB connection
